# electron-app-react-fastapi-vite-llm

./: .gitignore  package.json  pyproject.toml
backend/: main.py  run_server.py
electron/: main.cjs  start_server.js  start_server_1.js
frontend/src/: App.jsx  App.module.css
