[tool.poetry]
name = "electron-bundler"
version = "0.1.0"
description = ""
authors = ["YogJoshi14 <yogjoshi14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
langchain = "^0.2.2"
transformers = "^4.41.2"
torch = "^2.3.1"
langchain-community = "^0.2.3"
accelerate = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
